# ArduinoAdvnacedTouchSensor

./: .gitignore  GUI.py  pyproject.toml  serial_link.py
Arduino_sensing/: Arduino_sensing.ino  SendData.ino
